# open_files_plugin

./: .metadata  README.md  ffigen.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: open_files_plugin.podspec
ios/Classes/: OpenFilesPlugin.swift
lib/: open_files_plugin.dart  open_files_plugin_bindings_generated.dart
src/: CMakeLists.txt  open_files_plugin.c
